Actions
Bug #9662
closedfpu alignment pragmas broken on newer gcc
Start date:
2018-07-18
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
During the implementation of 9597 Want hypervisor API for FPU management, there were two structure prototypes that were moved into their corresponding header files. However, the alignment pragams did not travel along with them. This causes issues with newer compilers that are stricter about the placement of the alignment pragmas. The solution that others have opted for is to move them into using the __aligned elements on the structures themselves.
Updated by Electric Monk almost 4 years ago
- Status changed from New to Closed
git commit da8e407363328f2eb8ec9dc3b7a276f2b5606179
commit da8e407363328f2eb8ec9dc3b7a276f2b5606179 Author: Toomas Soome <tsoome@me.com> Date: 2018-07-18T17:17:13.000Z 9662 fpu alignment pragmas broken on newer gcc Reviewed by: Yuri Pankov <yuripv@yuripv.net> Reviewed by: Norm Jacobs <naj@snapcon.com> Reviewed by: Ken Mays <kmays2000@gmail.com> Approved by: Robert Mustacchi <rm@joyent.com>
Actions