9662 fpu alignment pragmas broken on newer gcc Reviewed by: Yuri Pankov <yuripv@yuripv.net> Reviewed by: Norm Jacobs <naj@snapcon.com> Reviewed by: Ken Mays <kmays2000@gmail.com> Approved by: Robert Mustacchi <rm@joyent.com>